src/test/deca/context/valid/SansObjet/DeclVar-Plus-float-float-float.deca
// Description:
//    Declaration of a float variable using + operation between a float variable and float .
// 
// Results:
//     nothing
// 
// Historique: 
//    cree le 11/01/2022 

{
    float x =  0.1; 
    float y = 0.1; 
    float z = x + y ; 
}
