src/test/deca/context/invalid/SansObjet/DeclVar-NE-float-int-float.deca
// Description:
//    Declaration of a float variable using != operation between a int variable and float .
// 
// Results:
//     Contextual error
//     Line 14: (RULE 3.28) Incompatible type assignment
// 
// Historique: 
//    cree le 11/01/2022 

{
    int x =  3; 
    float y = 0.1; 
    float z = x != y ; 
}
